WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127823
[iOS] REGRESSION (
r162663
): Webpages have strange artifacts or corruption around tile boundaries
https://bugs.webkit.org/show_bug.cgi?id=127823
Summary
[iOS] REGRESSION (r162663): Webpages have strange artifacts or corruption aro...
Andy Estes
Reported
2014-01-28 18:36:54 PST
[iOS] REGRESSION (
r162663
): Webpages have strange artifacts or corruption around tile boundaries
Attachments
[iOS] REGRESSION (r162663): Webpages have strange artifacts or corruption around tile boundaries
(2.80 KB, patch)
2014-01-28 18:39 PST
,
Andy Estes
dbates
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2014-01-28 18:37:08 PST
<
rdar://problem/15920823
>
Andy Estes
Comment 2
2014-01-28 18:39:21 PST
Created
attachment 222541
[details]
[iOS] REGRESSION (
r162663
): Webpages have strange artifacts or corruption around tile boundaries
Daniel Bates
Comment 3
2014-01-28 18:41:06 PST
Comment on
attachment 222541
[details]
[iOS] REGRESSION (
r162663
): Webpages have strange artifacts or corruption around tile boundaries OK. Feel free to get a rendering expert to provide a more thorough review.
Daniel Bates
Comment 4
2014-01-28 18:55:55 PST
Comment on
attachment 222541
[details]
[iOS] REGRESSION (
r162663
): Webpages have strange artifacts or corruption around tile boundaries View in context:
https://bugs.webkit.org/attachment.cgi?id=222541&action=review
> Source/WebCore/platform/ScrollView.cpp:385 > + IntSize scrollSize = m_contentsSize - visibleContentRect(LegacyIOSDocumentViewRect).size();
Notice that LegacyIOSDocumentViewRect is only defined when building for iOS. Instead we should use LegacyIOSDocumentVisibleRect, which is defined to be LegacyIOSDocumentViewRect and ContentsVisibleRect on iOS and non-iOS ports, respectively.
Andy Estes
Comment 5
2014-01-28 19:01:32 PST
Committed
r162994
: <
http://trac.webkit.org/changeset/162994
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug