[iOS] REGRESSION (r162663): Webpages have strange artifacts or corruption around tile boundaries https://bugs.webkit.org/show_bug.cgi?id=127823

Reviewed by Daniel Bates.

Original patch by Simon Fraser.

* platform/ScrollView.cpp: Specify LegacyIOSDocumentViewRect when calling visibleContentRect().

Canonical link: https://commits.webkit.org/145824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162994 268f45cc-cd09-0410-ab3c-d52691b4dbfc